# dotstar

./: README.md  pyproject.toml
src/: dotstar.py
