[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dotstar"
version = "1.0.0"
description = "Wildcard patterns for dotget paths"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["dict", "nested", "wildcard", "pattern", "json", "path"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/yourusername/dotstar"
Documentation = "https://github.com/yourusername/dotstar#readme"
Repository = "https://github.com/yourusername/dotstar"
Issues = "https://github.com/yourusername/dotstar/issues"

[project.optional-dependencies]
dev = ["pytest>=6.0", "pytest-cov"]

[tool.setuptools]
package-dir = {"": "src"}
packages = ["dotstar"]
